logs/mrsd_ros_tutorials/build.make.288.log.stderr
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp: In member function ‘bool ImageConverter::transformCB(mrsd_ros_tutorials::SaveData::Request&, mrsd_ros_tutorials::SaveData::Response&)’:
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:159:21: error: no match for ‘operator=’ (operand types are ‘mrsd_ros_tutorials::SaveDataResponse_<std::allocator<void> >::_point_cloud_type {aka sensor_msgs::PointCloud2_<std::allocator<void> >}’ and ‘pcl::PointCloud<pcl::PointXYZRGB>::Ptr {aka boost::shared_ptr<pcl::PointCloud<pcl::PointXYZRGB> >}’)
     res.point_cloud = cloud_transformed;
                     ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:159:21: note: candidates are:
In file included from /opt/ros/indigo/include/pcl_conversions/pcl_conversions.h:56:0,
                 from /home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:13:
/opt/ros/indigo/include/sensor_msgs/PointCloud2.h:24:8: note: sensor_msgs::PointCloud2_<std::allocator<void> >& sensor_msgs::PointCloud2_<std::allocator<void> >::operator=(const sensor_msgs::PointCloud2_<std::allocator<void> >&)
 struct PointCloud2_
        ^
/opt/ros/indigo/include/sensor_msgs/PointCloud2.h:24:8: note:   no known conversion for argument 1 from ‘pcl::PointCloud<pcl::PointXYZRGB>::Ptr {aka boost::shared_ptr<pcl::PointCloud<pcl::PointXYZRGB> >}’ to ‘const sensor_msgs::PointCloud2_<std::allocator<void> >&’
/opt/ros/indigo/include/sensor_msgs/PointCloud2.h:24:8: note: sensor_msgs::PointCloud2_<std::allocator<void> >& sensor_msgs::PointCloud2_<std::allocator<void> >::operator=(sensor_msgs::PointCloud2_<std::allocator<void> >&&)
/opt/ros/indigo/include/sensor_msgs/PointCloud2.h:24:8: note:   no known conversion for argument 1 from ‘pcl::PointCloud<pcl::PointXYZRGB>::Ptr {aka boost::shared_ptr<pcl::PointCloud<pcl::PointXYZRGB> >}’ to ‘sensor_msgs::PointCloud2_<std::allocator<void> >&&’
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp: In function ‘int main(int, char**)’:
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp:169:3: error: ‘kinect_apriltag_sr’ is not a member of ‘mrsd_ros_tutorials’
   mrsd_ros_tutorials::kinect_apriltag_sr transform_srv;
   ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp:169:42: error: expected ‘;’ before ‘transform_srv’
   mrsd_ros_tutorials::kinect_apriltag_sr transform_srv;
                                          ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp:177:3: error: ‘transform_srv’ was not declared in this scope
   transform_srv.request.item_number = item_number;
   ^
make[2]: *** [CMakeFiles/subscribe_pc_node.dir/src/subscribe_pc_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/subscribe_pc_node.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make[2]: *** [CMakeFiles/perception_data.dir/src/perception_data.cpp.o] Error 1
make[1]: *** [CMakeFiles/perception_data.dir/all] Error 2
make: *** [all] Error 2
